k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: dsh
  namespace: llm
spec:
  clusterIP: 10.43.76.59
  clusterIPs:
  - 10.43.76.59
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 3080
    protocol: TCP
    targetPort: 3080
  selector:
    app: dsh
  sessionAffinity: None
  type: ClusterIP
